Bug 697000 - Do kind-checking in Token's setters.  r=till.